force-app/main/default/objects/Transverse_Batchs_Setup__c/Transverse_Batchs_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Transverse Batchs Setup</label>
</CustomObject>