force-app/main/default/objects/Transverse_Batchs_Setup__c/fields/Batch_Worker_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Worker_Size__c</fullName>
    <label>Batch Worker Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>