force-app/main/default/objects/Transverse_Batchs_Setup__c/fields/Created_After__c.field-meta.xml
<CustomField>
    <fullName>Created_After__c</fullName>
    <label>Created After</label>
    <type>DateTime</type>
</CustomField>