force-app/main/default/objects/Transverse_Batchs_Setup__c/fields/Created_Before_Months__c.field-meta.xml
<CustomField>
    <fullName>Created_Before_Months__c</fullName>
    <label>Created Before Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>