force-app/main/default/objects/Transverse_Batchs_Setup__c/fields/job_Id__c.field-meta.xml
<CustomField>
    <fullName>job_Id__c</fullName>
    <label>job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>