force-app/main/default/objects/Transverse_Batchs_Setup__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>